Fixes for mobile overlapping

--- a/wwwroot/assets/styles/style.css
+++ b/wwwroot/assets/styles/style.css
@@ -32,7 +32,7 @@ html::-webkit-scrollbar {
 
   #mymap { 
         width: auto;
-        height: 80vh;
+        height: 50rem;
     }
 
 .anchor {
